force-app/main/default/objects/PDLM__Category__c/PDLM__Category__c.object-meta.xml
<CustomObject>
    <description>Categorize parts which have similar Lifecycle requirements and Fields</description>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>