force-app/main/default/objects/PDLM__Category__c/fields/PDLM__Autonumber__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Autonumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autonumber</label>
    <referenceTo>PDLM__Autonumber__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <type>Lookup</type>
</CustomField>