force-app/main/default/objects/PDLM__Category__c/fields/PDLM__Autonumber_Starting_Number__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Autonumber_Starting_Number__c</fullName>
    <description>Initial value for autonumber generation, required if Use Autonumber is checked.</description>
    <inlineHelpText>Initial value for autonumber generation, required if Use Autonumber is checked.</inlineHelpText>
    <label>Autonumber Starting Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>