force-app/main/default/objects/PDLM__Category__c/fields/PDLM__Exclude_From_Compliance_Rollup__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Exclude_From_Compliance_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set, items of this category and associated manufactured parts will be excluded from compliance rollup.</description>
    <inlineHelpText>When set, items of this category and associated manufactured parts will be excluded from compliance rollup.</inlineHelpText>
    <label>Exclude from Compliance Rollup</label>
    <type>Checkbox</type>
</CustomField>