force-app/main/default/objects/PDLM__Category__c/fields/PDLM__Inactive__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Active Category</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>