force-app/main/default/objects/PDLM__Category__c/fields/PDLM__Is_Descriptive_Change__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Is_Descriptive_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Makes a change record into a description change.  This makes the affected items readonly and no record are made.</description>
    <inlineHelpText>For changes that do not initiate a new draft of the affected item, and do not expire. Examples are ECRs, CAPAs, Corrective Actions, SCARs, Non-Conformance Reports, Incident Reports, and Audits.</inlineHelpText>
    <label>Is Descriptive Change</label>
    <type>Checkbox</type>
</CustomField>