force-app/main/default/objects/PDLM__Category__c/fields/PDLM__Item_Prefix__c.field-meta.xml
<CustomField>
    <fullName>PDLM__Item_Prefix__c</fullName>
    <description>When generating new items in this category, system will prefix the item number with this string.</description>
    <inlineHelpText>Optional string to be prepended to Item Name when creating new Items for this category. Include a dash or other separator at end of string if one is desired between the prefix and the autonumber portion of the item name.</inlineHelpText>
    <label>Item Prefix</label>
    <length>6</length>
    <type>Text</type>
</CustomField>