force-app/main/default/objects/PDLM__Category__c/validationRules/PDLM__Lifecycle_must_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>PDLM__Lifecycle_must_not_be_empty</fullName>
    <active>true</active>
    <description>All non-structural categories must have valid Lifecycles</description>
    <errorConditionFormula>AND(ISBLANK(PDLM__Lifecycle__c),NOT(PDLM__Is_Structural__c))</errorConditionFormula>
    <errorDisplayField>PDLM__Lifecycle__c</errorDisplayField>
    <errorMessage>Lifecycle must be specified</errorMessage>
</ValidationRule>