force-app/main/default/objects/PDLM__Category__c/listViews/PDLM__All.listView-meta.xml
<ListView>
    <fullName>PDLM__All</fullName>
    <columns>NAME</columns>
    <columns>PDLM__Autonumber__c</columns>
    <columns>PDLM__Path__c</columns>
    <columns>PDLM__Type__c</columns>
    <columns>PDLM__Lifecycle__c</columns>
    <columns>PDLM__Parent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>inactive</value>
    </filters>
    <label>All</label>
</ListView>